examples/test/testpolicy4230.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4230
  namespace: namespace402
spec:
  podSelector:
    matchLabels:
      key4: value13
      key21: value27
      key44: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value32
          key27: value18
          key8: value43
      podSelector:
        matchLabels:
          key46: value31
          key33: value36
